[package]
name = "blocking-permit"
version = "1.3.2"
edition = "2018"
authors = ["David Kellum <dek-oss@gravitext.com>"]
license       = "MIT/Apache-2.0"
description   = "Permits and a thread pool for blocking operations"
documentation = "https://docs.rs/blocking-permit"
repository    = "https://github.com/dekellum/blocking-permit"
readme        = "README.md"
keywords      = ["async", "semaphore", "thread"]
categories    = ["asynchronous"]
exclude       = [".gitignore", ".travis.yml", "appveyor.yml"]
build         = "build.rs"

[dependencies]
bytes               = { version=">=1.0.0, <1.1", optional=true }
futures-core        = { version=">=0.3.1, <0.4" }
futures-channel     = { version=">=0.3.1, <0.4", optional=true }
tao-log             = { version=">=1.0.0, <1.1" }
num_cpus            = { version=">=1.11.1, <1.14" }
futures-intrusive   = { version=">=0.3.1, <0.5", optional=true }
tokio               = { version=">=1.0.1, <1.2", optional=true }
parking_lot         = { version=">=0.10.0, <0.12" }

[dev-dependencies]
futures-executor    = { version=">=0.3.1, <0.4" }
futures-util        = { version=">=0.3.1, <0.4" }
lazy_static         = { version=">=1.3.0, <1.5" }
rand                = { version=">=0.8.0, <0.9" }
tempfile            = { version=">=3.1.0, <3.3" }
piccolog            = { version=">=1.0.0, <1.1" }

[features]
# See src/lib.rs section on Optional Features
default=["futures-channel"]

tokio-omnibus=["tokio-oneshot", "tokio-threaded", "tokio-semaphore"]
tokio-oneshot=["tokio", "tokio/sync"]
tokio-threaded=["tokio", "tokio/rt", "tokio/rt-multi-thread"]
tokio-semaphore=["tokio", "tokio/sync"]

cleaver=["bytes"]
yield-stream=[]

current-thread=[] # testing hack only

tangential=[] # less interesting benchmarks

[profile.bench]
lto = "thin"
incremental = false

[package.metadata.docs.rs]
features = ["futures-intrusive", "tokio-threaded", "cleaver", "yield-stream"]
